# XJTU_DXRMV_TASK02

./: README.md
opencv_project/: CMakeLists.txt  README.md
opencv_project/src/: main.cpp
opencv_project_2/: CMakeLists.txt
opencv_project_2/src/: main.cpp
src/: main.cpp
